exports[`no-nested-ternary > invalid(1): const foo = i > 5 ? i < 100 ? true : false : i < 100 ? true : false; 1`] = `

  1 | const foo = i > 5 ? i < 100 ? true : false : i < 100 ? true : false;

`;

exports[`no-nested-ternary > invalid(1): const foo = i > 5 ? i < 100 ? true : false : i < 100 ? true : false; 2`] = `

Message:
> 1 | const foo = i > 5 ? i < 100 ? true : false : i < 100 ? true : false;
    |                     ^^^^^^^^^^^^^^^^^^^^^^ Nested ternary expression should be parenthesized.

Output:
  1 | const foo = i > 5 ? (i < 100 ? true : false) : i < 100 ? true : false;

`;

exports[`no-nested-ternary > invalid(1): const foo = i > 5 ? i < 100 ? true : false : i < 100 ? true : false; 3`] = `

Message:
> 1 | const foo = i > 5 ? i < 100 ? true : false : i < 100 ? true : false;
    |                                              ^^^^^^^^^^^^^^^^^^^^^^ Nested ternary expression should be parenthesized.

Output:
  1 | const foo = i > 5 ? i < 100 ? true : false : (i < 100 ? true : false);

`;

exports[`no-nested-ternary > invalid(2): const foo = i > 5 ? true : (i < 100 ? true : (i < 1000 ? true : false)); 1`] = `

  1 | const foo = i > 5 ? true : (i < 100 ? true : (i < 1000 ? true : false));

`;

exports[`no-nested-ternary > invalid(2): const foo = i > 5 ? true : (i < 100 ? true : (i < 1000 ? true : false)); 2`] = `

Message:
> 1 | const foo = i > 5 ? true : (i < 100 ? true : (i < 1000 ? true : false));
    |                                               ^^^^^^^^^^^^^^^^^^^^^^^ Do not nest ternary expressions.

`;

exports[`no-nested-ternary > invalid(3): const foo = a ?\n\tb :\n\t(\n\t\tc ?\n\t\t\td :\n\t\t\t(\n\t\t\t\te ?\n\t\t\t\t\tf :\n\t\t\t\t\t(g ? h : i)\n\t\t\t)\n\t) 1`] = `

   1 | const foo = a ?
   2 | 	b :
   3 | 	(
   4 | 		c ?
   5 | 			d :
   6 | 			(
   7 | 				e ?
   8 | 					f :
   9 | 					(g ? h : i)
  10 | 			)
  11 | 	)

`;

exports[`no-nested-ternary > invalid(3): const foo = a ?\n\tb :\n\t(\n\t\tc ?\n\t\t\td :\n\t\t\t(\n\t\t\t\te ?\n\t\t\t\t\tf :\n\t\t\t\t\t(g ? h : i)\n\t\t\t)\n\t) 2`] = `

Message:
   1 | const foo = a ?
   2 | 	b :
   3 | 	(
   4 | 		c ?
   5 | 			d :
   6 | 			(
>  7 | 				e ?
     | 				^^^
>  8 | 					f :
     | ^^^^^^^^
>  9 | 					(g ? h : i)
     | ^^^^^^^^^^^^^^^^ Do not nest ternary expressions.
  10 | 			)
  11 | 	)

`;
